Elysian nations' leaders

--- a/localisation/aml_parties_l_english.yml
+++ b/localisation/aml_parties_l_english.yml
@@ -63,6 +63,8 @@
  takfirism_desc:0 "With a focus on an ultra-orthodox interpretation of Islamic law, the Takfiri are most concerned with cleansing Islam of its abominations and foreign influences. An inwardly focused ideology, Takfirism is not interested in spreading Islam outside of the national borders, but does believe in chastising and eliminating anything they see as stray, deviant or lapsed."
  musalahism:0 "Musalahism"
  musalahism_desc:0 "Musalahism is a moderate political ideology, originating in northern Indolemuria, which is focused on integrating Islam with the various cultures and religions of a nation. Musalahism seeks to harmonize national laws with Islam while at the same time allowing for other religious traditions to have representation in law as well."
+ caliph:0 "Caliph"
+ caliph_desc:0 "The caliph is believed to be both the political and spiritual successor to the Prophet Muhammed. The caliph is a spiritual leader of the people as well as the head of government. Some caliphates have been more moderate in nature while others have been little different from the absolute monarchs of European history."
  MUU_fascism_party:0 "Mu Virinji Partizi"
  MUU_communism_party:0 "Munu Qomiunist Partizi"
  MUU_democratic_party:0 "Temoqrazi Partizi"
