--- a/localisation/aml_political_leaders_l_english.yml
+++ b/localisation/aml_political_leaders_l_english.yml
@@ -1,4 +1,41 @@
 ﻿l_english:
+ MCF_socialism_leader:1 "Nicolau Góes"
+ MCF_marxism_leader:1 "Xandinho Vila"
+ MCF_generic_fascism_leader:1 "Ezequiel Magalhães"
+ MCF_oligarchism_leader:1 "Valentin Sequeira"
+ MCF_corps_commander_1:1 "Desidério Baptista"
+ MCF_corps_commander_2:1 "Fabricio Branco"
+ MCF_corps_commander_3:1 "Caio Mascarenhas"
+ MCF_corps_commander_4:1 "Tiago Cabral"
+ MCF_naval_leader_1:1 "Téo Matos"
+ MCF_naval_leader_2:1 "Narciso Resendes"
+ MCF_naval_leader_3:1 "Amando Fonseca"
+ MCF_naval_leader_4:1 "Teobaldo Aguiar"
+ MCF_naval_leader_5:1 "Mateus Queiroz"
+ SOK_socialism_leader:1 "Max Holmqvist"
+ SOK_marxism_leader:1 "Leon Ekblad"
+ SOK_generic_fascism_leader:1 "Georg Sandström"
+ SOK_oligarchism_leader:1 "Segol Södergren"
+ ZEI_socialism_leader:1 "Roelof Stobbenland"
+ ZEI_marxism_leader:1 "Henkjan Dam Wiechers"
+ ZEI_generic_fascism_leader:1 "Reinout Huisman"
+ ZEI_oligarchism_leader:1 "Laurens-Jan Meesters"
+ SCP_socialism_leader:1 "Aiden McGregor"
+ SCP_marxism_leader:1 "Bradley Robb"
+ SCP_generic_fascism_leader:1 "Blake Irvine"
+ SCP_oligarchism_leader:1 "Joshua McKie"
+ NOC_socialism_leader:1 "Jeremie Laroche"
+ NOC_marxism_leader:1 "Réthude Bourbonnais"
+ NOC_generic_fascism_leader:1 "Nicostrate Pagé"
+ NOC_oligarchism_leader:1 "Hugolin Fleurant"
+ SYD_socialism_leader:1 "Christoffer Skaarup"
+ SYD_marxism_leader:1 "Brian Bendtsen"
+ SYD_generic_fascism_leader:1 "Henrik Vester"
+ SYD_oligarchism_leader:1 "Gunnar Simonsen"
+ VAR_socialism_leader:1 "Olav Borre"
+ VAR_marxism_leader:1 "Trygve Solie"
+ VAR_generic_fascism_leader:1 "Torstein Egge"
+ VAR_oligarchism_leader:1 "Eirik Nordness"
  JAP_pacific_domination:1 "Pacific Domination"
  JAP_pacific_domination_desc:1 "If we look for resources, we should look no further than our own western pacific. The coastline of Mu is rich in valuable resources, and would provide us with a strategic control over the entire ocean. This region is imperative in allowing us to become the sole rulers of the west pacific."
  JAP_claim_trinsuyin:1 "Claim Trinsuyin"
