--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -1911,3 +1911,48 @@
  RGD_neutrality_ADJ:0 "Rio Grandense"
  RGD_communism_ADJ:0 "Rio Grandense"
  RGD_monarchism_ADJ:0 "Rio Grandense"
+ NSW_fascism:0 "Swabian Empire"
+ NSW_fascism_DEF:0 "Swabian Empire"
+ NSW_democratic:0 "New Swabian Republic"
+ NSW_democratic_DEF:0 "the New Swabian Republic"
+ NSW_neutrality:0 "New Swabian Republic"
+ NSW_neutrality_DEF:0 "the New Swabian Republic"
+ NSW_monarchism:0 "Kingdom of New Swabian"
+ NSW_monarchism_DEF:0 "the Kingdom of New Swabian"
+ NSW_communism:0 "Peoples Republic of New Swabian"
+ NSW_communism_DEF:0 "the Peoples Republic of New Swabian"
+ NSW_fascism_ADJ:0 "New Swabian"
+ NSW_democratic_ADJ:0 "New Swabian"
+ NSW_neutrality_ADJ:0 "New Swabian"
+ NSW_communism_ADJ:0 "New Swabian"
+ NSW_monarchism_ADJ:0 "New Swabian"
+ UTR_fascism:0 "Rangioran Empire"
+ UTR_fascism_DEF:0 "the Rangioran Empire"
+ UTR_democratic:0 "Rangioran Republic"
+ UTR_democratic_DEF:0 "the Rangioran Republic"
+ UTR_neutrality:0 "Rangioran Republic"
+ UTR_neutrality_DEF:0 "Rangioran Republic"
+ UTR_monarchism:0 "Kingdom of Rangiora"
+ UTR_monarchism_DEF:0 "the Kingdom of Rangiora"
+ UTR_communism:0 "Peoples Republic of Rangiora "
+ UTR_communism_DEF:0 "the Peoples Republic of Rangiora "
+ UTR_fascism_ADJ:0 "Rangioran"
+ UTR_democratic_ADJ:0 "Rangioran"
+ UTR_neutrality_ADJ:0 "Rangioran"
+ UTR_communism_ADJ:0 "Rangioran"
+ UTR_monarchism_ADJ:0 "Rangioran"Meropis
+ AME_fascism:0 "Meropan Empire"
+ AME_fascism_DEF:0 "Meropan Empire"
+ AME_democratic:0 "Republic of Meropis"
+ AME_democratic_DEF:0 "the Republic of Meropis"
+ AME_neutrality:0 "Republic of Meropis"
+ AME_neutrality_DEF:0 "the Republic of Meropis"
+ AME_monarchism:0 "Kingdom of Meropis"
+ AME_monarchism_DEF:0 "the Kingdom of Meropis"
+ AME_communism:0 "Peoples Republic of Meropis"
+ AME_communism_DEF:0 "the Peoples Republic of Meropis"
+ AME_fascism_ADJ:0 "Meropan"
+ AME_democratic_ADJ:0 "Meropan"
+ AME_neutrality_ADJ:0 "Meropan"
+ AME_communism_ADJ:0 "Meropan"
+ AME_monarchism_ADJ:0 "Meropan"
