State VP Rewrite 1

--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -1,253 +1,5 @@
 ﻿l_english:
- VICTORY_POINTS_13010:0 "Reitanitz"
- VICTORY_POINTS_13047:0 "Wake Harbor"
- VICTORY_POINTS_14999:0 "Geqijji"
- VICTORY_POINTS_14301:0 "Bongo"
- VICTORY_POINTS_14294:0 "Lyunamtsam"
- VICTORY_POINTS_13254:0 "Weyluchanao"
- VICTORY_POINTS_13265:0 "Shamseng"
- VICTORY_POINTS_13264:0 "Kheih"
- VICTORY_POINTS_13248:0 "Yahounan"
- VICTORY_POINTS_13262:0 "Hwutangrun"
- VICTORY_POINTS_13249:0 "Inaluregwoi"
- VICTORY_POINTS_13241:0 "Yimutsyu"
- VICTORY_POINTS_13335:0 "Arapōhue"
- VICTORY_POINTS_13413:0 "Hāpua-waikawa"
- VICTORY_POINTS_13419:0 "Kōhīnui"
- VICTORY_POINTS_14760:0 "Pōkemon"
- VICTORY_POINTS_13431:0 "Kororāreka"
- VICTORY_POINTS_14761:0 "Wainuiomu"
- VICTORY_POINTS_13966:0 "'Aifa'arua'i"
- VICTORY_POINTS_13835:0 "Muguraq"
- VICTORY_POINTS_5254:0 "Königshafen"
- VICTORY_POINTS_2478:0 "Neu Dresden"
- VICTORY_POINTS_2794:0 "Bösestadt"
- VICTORY_POINTS_2890:0 "Rodrigo Díaz de Vivar"
- VICTORY_POINTS_2987:0 "Gosíngol"
- VICTORY_POINTS_14121:0 "Poguinho"
- VICTORY_POINTS_14009:0 "Grasport"
- VICTORY_POINTS_13733:0 "Lionelville"
- VICTORY_POINTS_13732:0 "Solstice Harbour"
- VICTORY_POINTS_13712:0 "Port Bounty"
- VICTORY_POINTS_13710:0 "Angelston"
- VICTORY_POINTS_13359:0 "Marie's Landing"
- VICTORY_POINTS_13357:0 "Victoria"
- VICTORY_POINTS_13716:0 "Marinswade"
- VICTORY_POINTS_13657:0 "Geqijji"
- VICTORY_POINTS_14947:0 "Isignystadt"
- VICTORY_POINTS_14936:0 "Germaniahafen"
- VICTORY_POINTS_14084:0 "Oranjehaven"
- VICTORY_POINTS_15387:0 "Salchicha"
- VICTORY_POINTS_15315:0 "Ciudad de Todorov"
- VICTORY_POINTS_14935:0 "Wrightston"
- VICTORY_POINTS_14824:0 "Setimana"
- VICTORY_POINTS_15470:0 "Geestbai"
- VICTORY_POINTS_2145:0 "Salvación"
- VICTORY_POINTS_15312:0 "Tatea"
- VICTORY_POINTS_10188:0 "Papeete"
- VICTORY_POINTS_13603:0 "Nyrønne"
- VICTORY_POINTS_13049:0 "Pitkairn"
- VICTORY_POINTS_14535:0 "Blauwasser"
- VICTORY_POINTS_15178:0 "Vatpagchi Saeli"
- VICTORY_POINTS_13905:0 "Nofoaga Agava'a"
- VICTORY_POINTS_13907:0 "Nya Elfsborg" #Real name look it up.
- VICTORY_POINTS_13515:0 "Moli Feagai"
- VICTORY_POINTS_14753:0 "Loto Aai"
- VICTORY_POINTS_13284:0 "Savaiki"
- VICTORY_POINTS_13282:0 "Port Dewey"
- VICTORY_POINTS_13899:0 "Port Laurel"
- VICTORY_POINTS_13898:0 "King's Thumb"
- VICTORY_POINTS_13766:0 "Q'tir"
- VICTORY_POINTS_13756:0 "Qna'a"
- VICTORY_POINTS_15209:0 "Labn"
- VICTORY_POINTS_13822:0 "Asetale"
- VICTORY_POINTS_13821:0 "Virqq"
- VICTORY_POINTS_13808:0 "Neji"
- VICTORY_POINTS_13622:0 "Navheza"
- VICTORY_POINTS_14755:0 "Maugaomolimau"
- VICTORY_POINTS_13476:0 "Aai O Le Togavao"
- VICTORY_POINTS_15360:0 "Sable Blanc"
- VICTORY_POINTS_14027:0 "Nouvelle-Chambéry"
- VICTORY_POINTS_15085:0 "Waponi Woo"
- VICTORY_POINTS_14076:0 "Groene Velden"
- VICTORY_POINTS_14051:0 "San Leandro"
- VICTORY_POINTS_14033:0 "Cruz de San Andrés"
- VICTORY_POINTS_14054:0 "Jallivizen"
- VICTORY_POINTS_14066:0 "Arquvon"
- VICTORY_POINTS_14141:0 "Santa Florentina"
- VICTORY_POINTS_14146:0 "San Pedro"
- VICTORY_POINTS_2405:0 "Arena de Oro"
- VICTORY_POINTS_8664:0 "Edwardsberg"
- VICTORY_POINTS_2552:0 "Gelbhaken"
- VICTORY_POINTS_5474:0 "Karlsbaden"
- VICTORY_POINTS_5659:0 "Reichhaltige"
- VICTORY_POINTS_8327:0 "Silberne Straße"
- VICTORY_POINTS_8769:0 "Schönestrand"
- VICTORY_POINTS_3244:0 "Süßwasser"
- VICTORY_POINTS_13979:0 "Liberación"
- VICTORY_POINTS_13987:0 "Campo Santo"
- VICTORY_POINTS_13998:0 "Tierra Peligrosa"
- VICTORY_POINTS_13958:0 "Tuugamau O Lafu"
- VICTORY_POINTS_13953:0 "Laautalatala"
- VICTORY_POINTS_13947:0 "Leai Ni Laau"
- VICTORY_POINTS_13928:0 "Tafolāfaga"
- VICTORY_POINTS_13498:0 "Lanu Omea"
- VICTORY_POINTS_13514:0 "Oi'oi"
- VICTORY_POINTS_13528:0 "Tolu Laau"
- VICTORY_POINTS_13538:0 "Alale'a Tagi"
- VICTORY_POINTS_13567:0 "Mafuie"
- VICTORY_POINTS_13574:0 "Miriamsville"
- VICTORY_POINTS_13903:0 "Manka"
- VICTORY_POINTS_13773:0 "Inirliq"
- VICTORY_POINTS_13796:0 "Girgu"
- VICTORY_POINTS_15048:0 "Joramlabnaj"
- VICTORY_POINTS_13665:0 "Duqun"
- VICTORY_POINTS_13647:0 "Hatmaq"
- VICTORY_POINTS_13407:0 "Vaalele Malolo"
- VICTORY_POINTS_13384:0 "Inuhumuku"
- VICTORY_POINTS_14707:0 "Faanoanoa"
- VICTORY_POINTS_14620:0 "Vavae Ese"
- VICTORY_POINTS_14617:0 "Ofoofogia"
- VICTORY_POINTS_13305:0 "Lanumeamata"
- VICTORY_POINTS_14826:0 "Zalā Osta"
- VICTORY_POINTS_14111:0 "São Vicente"
- VICTORY_POINTS_15440:0 "Touro Preto"
- VICTORY_POINTS_14091:0 "Solquente"
- VICTORY_POINTS_2724:0 "Winterbucht"
- VICTORY_POINTS_13853:0 "Zochtli"
- VICTORY_POINTS_13636:0 "Duneyig"
- VICTORY_POINTS_13618:0 "Tegzusuqu"
- VICTORY_POINTS_13604:0 "Sofiashavn"
- VICTORY_POINTS_12572:0 "Great Sky"
- VICTORY_POINTS_7779:0 "Todd City"
- VICTORY_POINTS_1832:0 "Astoria"
- VICTORY_POINTS_14204:0 "McCloud"
- VICTORY_POINTS_12303:0 "Las Vegas"
- VICTORY_POINTS_4607:0 "San Andreas"
- VICTORY_POINTS_11658:0 "Manzanita"
- VICTORY_POINTS_610:0 "Eureka"
- VICTORY_POINTS_6881:0 "Santa Barbara"
- VICTORY_POINTS_14238:0 "Salinas"
- VICTORY_POINTS_941:0 "Bakersfield"
- VICTORY_POINTS_15500:0 "Zuhaitz"
- VICTORY_POINTS_15516:0 "Anoixte"
- VICTORY_POINTS_15519:0 "Yamylaik"
- VICTORY_POINTS_15512:0 "Doxa"
- VICTORY_POINTS_15525:0 "Osoa"
- VICTORY_POINTS_15531:0 "Burmiunean"
- VICTORY_POINTS_14148:0 "Þukefjäll"
- VICTORY_POINTS_14155:0 "Guðir Hjam"
- VICTORY_POINTS_14147:0 "Altenín"
- VICTORY_POINTS_14151:0 "Tashrets"
- VICTORY_POINTS_14156:0 "Chuzaseit"
- VICTORY_POINTS_14157:0 "Taidorie"
- VICTORY_POINTS_14257:0 "Takam"
- VICTORY_POINTS_14258:0 "Mashat"
- VICTORY_POINTS_6909:0 "New Haven"
- VICTORY_POINTS_11830:0 "Providence"
- VICTORY_POINTS_4854:0 "Marquette"
- VICTORY_POINTS_14217:0 "Punta Bruja"
- VICTORY_POINTS_10527:0 "Yellowknife"
- VICTORY_POINTS_10548:0 "Mannerton"
- VICTORY_POINTS_12571:0 "Sampson"
- VICTORY_POINTS_7869:0 "Whitehorse"
- VICTORY_POINTS_14208:0 "Ollebo"
- VICTORY_POINTS_7820:0 "Cordial"
- VICTORY_POINTS_14205:0 "Rycroft"
- VICTORY_POINTS_14223:0 "Cabo San Lucas"
- VICTORY_POINTS_7964:0 "Los Demonios"
- VICTORY_POINTS_3712:0 "Concord"
- VICTORY_POINTS_4445:0 "Montpelier"
- VICTORY_POINTS_3732:0 "Augusta"
- VICTORY_POINTS_14324:0 "Port Lémurien"
- VICTORY_POINTS_8502:0 "Huîtrier"
- VICTORY_POINTS_14646:0 "Sitanamupra"
- VICTORY_POINTS_14653:0 "Deviyo"
- VICTORY_POINTS_14668:0 "Sanduro"
- VICTORY_POINTS_14672:0 "Ratu"
- VICTORY_POINTS_14280:0 "Kantoru"
- VICTORY_POINTS_14682:0 "Denitoramma"
- VICTORY_POINTS_14287:0 "Jumuparillaka"
- VICTORY_POINTS_14619:0 "Kura Kati"
- VICTORY_POINTS_14614:0 "Tangki"
- VICTORY_POINTS_14268:0 "Nilam"
- VICTORY_POINTS_14626:0 "Pitiyachola"
- VICTORY_POINTS_14629:0 "Gundrasupitla"
- VICTORY_POINTS_14265:0 "Terku"
- VICTORY_POINTS_14266:0 "Vila de São Nicolau"
- VICTORY_POINTS_14640:0 "Umbugarla"
- VICTORY_POINTS_14636:0 "Tiwi"
- VICTORY_POINTS_9062:0 "Mulatanam"
- VICTORY_POINTS_14591:0 "Camaveiyil"
- VICTORY_POINTS_14593:0 "Velaccamaveiyil"
- VICTORY_POINTS_8925:0 "Laragiya"
- VICTORY_POINTS_14585:0 "Daly"
- VICTORY_POINTS_14565:0 "Jarraka"
- VICTORY_POINTS_14559:0 "Turamu"
- VICTORY_POINTS_14372:0 "Atika"
- VICTORY_POINTS_8495:0 "Kilak"
- VICTORY_POINTS_14348:0 "Kumagandarivi"
- VICTORY_POINTS_14346:0 "Cantanakkattai"
- VICTORY_POINTS_14343:0 "Attupil"
- VICTORY_POINTS_14340:0 "Palivari"
- VICTORY_POINTS_14275:0 "Raktarvannam"
- VICTORY_POINTS_14279:0 "Peruvala"
- VICTORY_POINTS_14955:0 "Lemisara"
- VICTORY_POINTS_14276:0 "Biloka"
- VICTORY_POINTS_14331:0 "Mabusi"
- VICTORY_POINTS_14898:0 "Horaka"
- VICTORY_POINTS_14931:0 "Ilayaci"
- VICTORY_POINTS_14917:0 "Ishiram"
- VICTORY_POINTS_2905:0 "Shakwaram"
- VICTORY_POINTS_14865:0 "Kasharaan"
- VICTORY_POINTS_14852:0 "Saitasaban"
- VICTORY_POINTS_14843:0 "Nyeupe"
- VICTORY_POINTS_14344:0 "Shahan"
- VICTORY_POINTS_14838:0 "Amenie"
- VICTORY_POINTS_14320:0 "Dielle"
- VICTORY_POINTS_5323:0 "Deutsgrenstat"
- VICTORY_POINTS_5346:0 "Gammon"
- VICTORY_POINTS_14813:0 "Toqueville"
- VICTORY_POINTS_14492:0 "Petersby"
- VICTORY_POINTS_14491:0 "Guhrnstown"
- VICTORY_POINTS_14770:0 "Kalgatunga"
- VICTORY_POINTS_14312:0 "New Valkenburg"
- VICTORY_POINTS_6815:0 "Ellesburg"
- VICTORY_POINTS_14342:0 "Merkku"
- VICTORY_POINTS_14411:0 "Vendurutana"
- VICTORY_POINTS_14379:0 "Bhamavani"
- VICTORY_POINTS_14387:0 "Nandrigura"
- VICTORY_POINTS_14398:0 "Tumi"
- VICTORY_POINTS_14390:0 "Desdinraga"
- VICTORY_POINTS_7714:0 "Tetinar"
- VICTORY_POINTS_14731:0 "Morganastown"
- VICTORY_POINTS_14721:0 "Myrddin"
- VICTORY_POINTS_14693:0 "Agarston"
- VICTORY_POINTS_14699:0 "Pendleville"
- VICTORY_POINTS_5540:0 "Danspost"
- VICTORY_POINTS_14519:0 "Kilespost"
- VICTORY_POINTS_14549:0 "Anchwhirram"
- VICTORY_POINTS_14501:0 "Meyerston"
- VICTORY_POINTS_14430:0 "Audenshire"
- VICTORY_POINTS_14420:0 "Worrorra"
- VICTORY_POINTS_14458:0 "Elsinore"
- VICTORY_POINTS_14445:0 "Vikteria"
- VICTORY_POINTS_14463:0 "New Hampstead"
- VICTORY_POINTS_14481:0 "Tinton"
- VICTORY_POINTS_14486:0 "Melton"
- VICTORY_POINTS_8703:0 "Nana Station"
- VICTORY_POINTS_14783:0 "Jandhragara"
- VICTORY_POINTS_14787:0 "Elumistdragara"
- VICTORY_POINTS_14804:0 "Agneyashila"
- VICTORY_POINTS_14748:0 "Shilvertown"
- VICTORY_POINTS_8399:0 "Romanobile"
- VICTORY_POINTS_14888:0 "Milimia"
- VICTORY_POINTS_7036:0 "Nusedrimana"
- VICTORY_POINTS_7241:0 "Manhakadrigiri"
- VICTORY_POINTS_8799:0 "Yirram"
- VICTORY_POINTS_14456:0 "Pilesbury"
- VICTORY_POINTS_14903: "Sanggofesaran"
- VICTORY_POINTS_13583: "Pennston"
+ #Fine
  VICTORY_POINTS_12736: "Los Demonios"
  VICTORY_POINTS_3169: "Mavrastok"
  VICTORY_POINTS_7738: "Belorevostok"
@@ -285,3 +37,116 @@
  VICTORY_POINTS_14115: "Ny-Malmø"
  VICTORY_POINTS_14060: "Cesepaglia"
  VICTORY_POINTS_14058: "Nythrengroth"
+#Mu
+VICTORY_POINTS_14748:0 "Vaalele Malolo"
+VICTORY_POINTS_14745:0 "Kororareka"
+VICTORY_POINTS_14773:0 "Wainuiomo"
+VICTORY_POINTS_14817:0 "Aai O Le Togavao"
+VICTORY_POINTS_14769:0 "Mauga O Molimau"
+VICTORY_POINTS_14704:0 "Faanoanoa"
+VICTORY_POINTS_14824:0 "Setimana"
+VICTORY_POINTS_14826:0 "Zala Osta"
+VICTORY_POINTS_14879:0 "Alale'a Tagi"
+VICTORY_POINTS_14908:0 "Mafuie"
+VICTORY_POINTS_14869:0 "Tolu Laau"
+VICTORY_POINTS_14855:0 "Oi' Oi"
+VICTORY_POINTS_14839:0 "Lanu Omea"
+VICTORY_POINTS_14914:0 "Miriamsville"
+VICTORY_POINTS_14920:0 "Pennston"
+VICTORY_POINTS_14934:0 "Wrightston"
+VICTORY_POINTS_14936:0 "Germaniahafen"
+VICTORY_POINTS_14949:0 "Von Isignystadt"
+VICTORY_POINTS_14966:0 "Navheza"
+VICTORY_POINTS_14977:0 "Duneyig"
+VICTORY_POINTS_14960:0 "Tegzusuqu"
+VICTORY_POINTS_14988:0 "Hatmaq"
+VICTORY_POINTS_14998:0 "Geqijji"
+VICTORY_POINTS_15006:0 "Duqun"
+VICTORY_POINTS_15043:0 "Joramlabnaj"
+VICTORY_POINTS_15057:0 "Marinswade"
+VICTORY_POINTS_15053:0 "Port Bounty"
+VICTORY_POINTS_15050:0 "Angelston"
+VICTORY_POINTS_15073:0 "Solstice Harbor"
+VICTORY_POINTS_15074:0 "Lionelville"
+VICTORY_POINTS_15082:0 "Name Please"
+VICTORY_POINTS_15085:0 "Waponi Woo"
+VICTORY_POINTS_15097:0 "Qna'a"
+VICTORY_POINTS_15107:0 "Q'tir"
+VICTORY_POINTS_15114:0 "Inirliq"
+VICTORY_POINTS_15137:0 "Girgu"
+VICTORY_POINTS_15149:0 "Neji"
+VICTORY_POINTS_15162:0 "Virqq"
+VICTORY_POINTS_15163:0 "Asetale"
+VICTORY_POINTS_15178:0 "Vatpagchi Saeli"
+VICTORY_POINTS_15176:0 "Muguraq"
+VICTORY_POINTS_15206:0 "Zochtil"
+VICTORY_POINTS_15209:0 "Labn"
+VICTORY_POINTS_15244:0 "Manka"
+VICTORY_POINTS_15246:0 "Nofoaga Agava'a"
+VICTORY_POINTS_15248:0 "Awa"
+VICTORY_POINTS_15257:0 "Vaitafe Matagofie"
+VICTORY_POINTS_15269:0 "Tafolafaga"
+VICTORY_POINTS_15280:0 "Leai Ni Laau"
+VICTORY_POINTS_15292:0 "Sometalatala"
+VICTORY_POINTS_15299:0 "Tuugamau O Lafu"
+VICTORY_POINTS_15307:0 "'Aofa'arua'i"
+VICTORY_POINTS_15328:0 "Campo Santo"
+VICTORY_POINTS_15316:0 "Ciudad de Todorov"
+VICTORY_POINTS_15317:0 "Tatea"
+VICTORY_POINTS_15320:0 "Liberacion"
+VICTORY_POINTS_15339:0 "Tierra Peligrosa"
+VICTORY_POINTS_15350:0 "Grasport"
+VICTORY_POINTS_15360:0 "Sable Blanc"
+VICTORY_POINTS_15368:0 "Nouvelle-Chambery"
+VICTORY_POINTS_15403:0 "Duhuaz"
+VICTORY_POINTS_15407:0 "Arquvon"
+VICTORY_POINTS_15395:0 "Jallivizen"
+VICTORY_POINTS_15392:0 "San Leandro"
+VICTORY_POINTS_15387:0 "Salchicha"
+VICTORY_POINTS_15374:0 "Cruz de San Andres"
+VICTORY_POINTS_15417:0 "Groene Velden"
+VICTORY_POINTS_15425:0 "Oranjehaven"
+VICTORY_POINTS_15462:0 "Poguinho"
+VICTORY_POINTS_15452:0 "Sao Vicente"
+VICTORY_POINTS_15440:0 "Touro Preto"
+VICTORY_POINTS_15432:0 "Solquente"
+VICTORY_POINTS_15470:0 "Geestbai"
+VICTORY_POINTS_15482:0 "Santa Florentina"
+VICTORY_POINTS_14395:0 "Arena de Oro"
+VICTORY_POINTS_14384:0 "Salvacion"
+VICTORY_POINTS_15487:0 "San Pedro"
+VICTORY_POINTS_14398:0 "Neu Dresden"
+VICTORY_POINTS_14401:0 "Gelbhaken"
+VICTORY_POINTS_14409:0 "Bosestadt"
+VICTORY_POINTS_14406:0 "Winterbucht"
+VICTORY_POINTS_14424:0 "Subwasser"
+VICTORY_POINTS_14435:0 "Konigshafen"
+VICTORY_POINTS_14449:0 "Reichhaltige"
+VICTORY_POINTS_14445:0 "Karlsbaden"
+VICTORY_POINTS_14535:0 "Blauwasser"
+VICTORY_POINTS_14534:0 "Schonestrand"
+VICTORY_POINTS_14480:0 "Silberne Stabe"
+VICTORY_POINTS_14510:0 "Edwardsberg"
+VICTORY_POINTS_14573:0 "Pitkairn"
+VICTORY_POINTS_14944:0 "Nyronne"
+VICTORY_POINTS_16375:0 "Hangsguen"
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
