State VP Rewrite 2

--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- #Fine
+ #Old World Renames
  VICTORY_POINTS_12736: "Los Demonios"
  VICTORY_POINTS_3169: "Mavrastok"
  VICTORY_POINTS_7738: "Belorevostok"
@@ -18,9 +18,11 @@
  VICTORY_POINTS_15002: "Tol Ahrem"
  VICTORY_POINTS_15001: "Qarghi"
  VICTORY_POINTS_15004: "Qapeta"
+ #Australia
  VICTORY_POINTS_8186: "Port Augusta"
  VICTORY_POINTS_10927: "Andamooka"
  VICTORY_POINTS_1077: "Broken Hill"
+ #Elysia
  VICTORY_POINTS_13131: "Muru'ona"
  VICTORY_POINTS_10769: "Monterrey"
  VICTORY_POINTS_12835: "Nuevo Laredo"
@@ -130,6 +132,99 @@ VICTORY_POINTS_14510:0 "Edwardsberg"
 VICTORY_POINTS_14573:0 "Pitkairn"
 VICTORY_POINTS_14944:0 "Nyronne"
 VICTORY_POINTS_16375:0 "Hangsguen"
+
+#Atlantis and Co
+VICTORY_POINTS_15488:0 "Altenin"
+VICTORY_POINTS_15493:0 "Pukerfjall"
+VICTORY_POINTS_15496:0 "Gudir Hjam"
+VICTORY_POINTS_15530:0 "Akitselo"
+VICTORY_POINTS_15500:0 "Zuhaitz"
+VICTORY_POINTS_15512:0 "Doxa"
+VICTORY_POINTS_15525:0 "Osoa"
+VICTORY_POINTS_15516:0 "Anoixte"
+VICTORY_POINTS_15498:0 "Taidorie"
+VICTORY_POINTS_15497:0 "Chuzaseit"
+VICTORY_POINTS_15492:0 "Tashrets"
+VICTORY_POINTS_15598:0 "Takam"
+VICTORY_POINTS_15599:0 "Maxat"
+
+#American Replacements
+VICTORY_POINTS_12572:0 "Great Sky"
+VICTORY_POINTS_7779:0 "Todd City"
+VICTORY_POINTS_11658:0 "Manzanita"
+VICTORY_POINTS_610:0 "Eureka"
+VICTORY_POINTS_4607:0 "San Andreas"
+VICTORY_POINTS_12571:0 "Sampson"
+VICTORY_POINTS_10548:0 "Mannerton" 
+VICTORY_POINTS_7820:0 "Cordial"
+VICTORY_POINTS_15549:0 "Ollebo"
+VICTORY_POINTS_15546:0 "Rycroft"
+VICTORY_POINTS_4854:0 "Marquete"
+VICTORY_POINTS_15560:0 "Punta Bruja"
+VICTORY_POINTS_3712:0 "Concord"
+VICTORY_POINTS_6909:0 "New Haven"
+VICTORY_POINTS_6732:0 "Boston"
+VICTORY_POINTS_4445:0 "Montpelier"
+VICTORY_POINTS_3732:0 "Augusta"
+
+#Lemuria
+VICTORY_POINTS_14489:0 "Huitrier"
+VICTORY_POINTS_14898:0 "Capital"
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
+VICTORY_POINTS_
 VICTORY_POINTS_
 VICTORY_POINTS_
 VICTORY_POINTS_
