--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -1,44 +1,50 @@
 ﻿l_english:
  #Old World Renames
- VICTORY_POINTS_12736: "Los Demonios"
- VICTORY_POINTS_3169: "Mavrastok"
- VICTORY_POINTS_7738: "Belorevostok"
- VICTORY_POINTS_4669: "Anzeshrin"
- VICTORY_POINTS_4710: "Yetrodinsk"
- VICTORY_POINTS_1744: "Pripolyarnyy"
- VICTORY_POINTS_10620: "Nitmazeryn"
- VICTORY_POINTS_10635: "Ugrunad"
- VICTORY_POINTS_10564: "Maltengorod"
- VICTORY_POINTS_1704: "Illim"
- VICTORY_POINTS_7685: "Nerazapad"
- VICTORY_POINTS_4730: "Ginamtdinsk"
- VICTORY_POINTS_9786: "Wilmington"
- VICTORY_POINTS_10859: "Wakanda"
- VICTORY_POINTS_12929: "Fragneilo"
- VICTORY_POINTS_15002: "Tol Ahrem"
- VICTORY_POINTS_15001: "Qarghi"
- VICTORY_POINTS_15004: "Qapeta"
+ VICTORY_POINTS_12736:0 "Los Demonios"
+ VICTORY_POINTS_3169:0 "Mavrastok"
+ VICTORY_POINTS_7738:0 "Belorevostok"
+ VICTORY_POINTS_4669:0 "Anzeshrin"
+ VICTORY_POINTS_4710:0 "Yetrodinsk"
+ VICTORY_POINTS_1744:0 "Pripolyarnyy"
+ VICTORY_POINTS_10620:0 "Nitmazeryn"
+ VICTORY_POINTS_10635:0 "Ugrunad"
+ VICTORY_POINTS_10564:0 "Maltengorod"
+ VICTORY_POINTS_1704:0 "Illim"
+ VICTORY_POINTS_7685:0 "Nerazapad"
+ VICTORY_POINTS_4730:0 "Ginamtdinsk"
+ VICTORY_POINTS_9786:0 "Wilmington"
+ VICTORY_POINTS_10859:0 "Wakanda"
+ VICTORY_POINTS_12929:0 "Fragneilo"
+ VICTORY_POINTS_15002:0 "Tol Ahrem"
+ VICTORY_POINTS_15001:0 "Qarghi"
+ VICTORY_POINTS_15004:0 "Qapeta"
+ VICTORY_POINTS_16340:0 "Nakhalgluta"
+ VICTORY_POINTS_12929:0 "Fragneilo"
+ VICTORY_POINTS_16343:0 "Tol Ahrem"
+ VICTORY_POINTS_16345:0 "Qapeta"
+ VICTORY_POINTS_16342:0 "Qarghi"
+ 
  #Australia
- VICTORY_POINTS_8186: "Port Augusta"
- VICTORY_POINTS_10927: "Andamooka"
- VICTORY_POINTS_1077: "Broken Hill"
+ VICTORY_POINTS_8186:0 "Port Augusta"
+ VICTORY_POINTS_10927:0 "Andamooka"
+ VICTORY_POINTS_1077:0 "Broken Hill"
  #Elysia
- VICTORY_POINTS_13131: "Muru'ona"
- VICTORY_POINTS_10769: "Monterrey"
- VICTORY_POINTS_12835: "Nuevo Laredo"
- VICTORY_POINTS_10795: "ad-Duwaym"
- VICTORY_POINTS_1960: "Nyala"
- VICTORY_POINTS_14305: "Sveaborg"
- VICTORY_POINTS_14307: "Strandviken"
- VICTORY_POINTS_13991: "Gothenborg"
- VICTORY_POINTS_14015: "Nya Vasa"
- VICTORY_POINTS_13993: "Christina"
- VICTORY_POINTS_14262: "Stuarts Town"
- VICTORY_POINTS_13944: "Thatcherton" #Would be renamed after Margaret Thatcher leaves office
- VICTORY_POINTS_14062: "Montaussonne"
- VICTORY_POINTS_14115: "Ny-Malmø"
- VICTORY_POINTS_14060: "Cesepaglia"
- VICTORY_POINTS_14058: "Nythrengroth"
+ VICTORY_POINTS_13131:0 "Muru'ona"
+ VICTORY_POINTS_10769:0 "Monterrey"
+ VICTORY_POINTS_12835:0 "Nuevo Laredo"
+ VICTORY_POINTS_10795:0 "ad-Duwaym"
+ VICTORY_POINTS_1960:0 "Nyala"
+ VICTORY_POINTS_14305:0 "Sveaborg"
+ VICTORY_POINTS_14007:0 "Strandviken"
+ VICTORY_POINTS_13991:0 "Gothenborg"
+ VICTORY_POINTS_14015:0 "Nya Vasa"
+ VICTORY_POINTS_13993:0 "Christina"
+ VICTORY_POINTS_14262:0 "Stuarts Town"
+ VICTORY_POINTS_13944:0 "Thatcherton" #Would be renamed after Margaret Thatcher leaves office
+ VICTORY_POINTS_14062:0 "Montaussonne"
+ VICTORY_POINTS_14115:0 "Ny-Malmø"
+ VICTORY_POINTS_14060:0 "Cesepaglia"
+ VICTORY_POINTS_14058:0 "Nythrengroth"
 #Mu
 VICTORY_POINTS_14748:0 "Vaalele Malolo"
 VICTORY_POINTS_14745:0 "Kororareka"
@@ -89,7 +95,7 @@ VICTORY_POINTS_15248:0 "Awa"
 VICTORY_POINTS_15257:0 "Vaitafe Matagofie"
 VICTORY_POINTS_15269:0 "Tafolafaga"
 VICTORY_POINTS_15280:0 "Leai Ni Laau"
-VICTORY_POINTS_15292:0 "Sometalatala"
+VICTORY_POINTS_15292:0 "Laautalatala"
 VICTORY_POINTS_15299:0 "Tuugamau O Lafu"
 VICTORY_POINTS_15307:0 "'Aofa'arua'i"
 VICTORY_POINTS_15328:0 "Campo Santo"
@@ -131,7 +137,27 @@ VICTORY_POINTS_14480:0 "Silberne Stabe"
 VICTORY_POINTS_14510:0 "Edwardsberg"
 VICTORY_POINTS_14573:0 "Pitkairn"
 VICTORY_POINTS_14944:0 "Nyronne"
-VICTORY_POINTS_16375:0 "Hangsguen"
+VICTORY_POINTS_16375:0 "Hangshuen"
+VICTORY_POINTS_15635:0 "Lyunamtsam"
+VICTORY_POINTS_14589:0 "Yahounan"
+VICTORY_POINTS_14582:0 "Yimutsyu"
+VICTORY_POINTS_15642:0 "Bongo"
+VICTORY_POINTS_14603:0 "Hwutangrun"
+VICTORY_POINTS_14610:0 "Shamseng"
+VICTORY_POINTS_14646:0 "Lanumeamata"
+VICTORY_POINTS_14625:0 "Savakiki"
+VICTORY_POINTS_14676:0 "Araphohue"
+VICTORY_POINTS_14700:0 "Marie's Landing"
+VICTORY_POINTS_14698:0 "Victoria"
+VICTORY_POINTS_14615:0 "Vavae Ese"
+VICTORY_POINTS_14622:0 "Ofoofogia"
+VICTORY_POINTS_14753:0 "Loto Aai"
+VICTORY_POINTS_14754:0 "Hapua-waikawa"
+VICTORY_POINTS_14760:0 "Kohinui"
+VICTORY_POINTS_14761:0 "Pokemon"
+VICTORY_POINTS_14595:0 "Weyluchanao"
+VICTORY_POINTS_14590:0 "Inaluregwoi"
+VICTORY_POINTS_14725:0 "Inhumuku"
 
 #Atlantis and Co
 VICTORY_POINTS_15488:0 "Altenin"
@@ -147,6 +173,10 @@ VICTORY_POINTS_15497:0 "Chuzaseit"
 VICTORY_POINTS_15492:0 "Tashrets"
 VICTORY_POINTS_15598:0 "Takam"
 VICTORY_POINTS_15599:0 "Maxat"
+VICTORY_POINTS_15506:0 "Inaxe"
+VICTORY_POINTS_15531:0 "Burmiunean"
+VICTORY_POINTS_13010:0 "Reitanitz"
+VICTORY_POINTS_15519:0 "Yamylaik"
 
 #American Replacements
 VICTORY_POINTS_12572:0 "Great Sky"
@@ -166,55 +196,97 @@ VICTORY_POINTS_6909:0 "New Haven"
 VICTORY_POINTS_6732:0 "Boston"
 VICTORY_POINTS_4445:0 "Montpelier"
 VICTORY_POINTS_3732:0 "Augusta"
+VICTORY_POINTS_9758:0 "Wilmington"
 
 #Lemuria
 VICTORY_POINTS_14489:0 "Huitrier"
-VICTORY_POINTS_14898:0 "Capital"
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
+VICTORY_POINTS_16239:0 "Horaka"
+VICTORY_POINTS_14783:0 "Jandhragara"
+VICTORY_POINTS_16064:0 "Myrddin"
+VICTORY_POINTS_16040:0 "Pendleville"
+VICTORY_POINTS_16153:0 "Toqueville"
+VICTORY_POINTS_14459:0 "Ellesburg"
+VICTORY_POINTS_14482:0 "Romanobile"
+VICTORY_POINTS_15653:0 "New Valkenburg"
+VICTORY_POINTS_16088:0 "Shilvertown"
+VICTORY_POINTS_16113:0 "Kalgatunga"
+VICTORY_POINTS_15934:0 "Velaccamaveiyil"
+VICTORY_POINTS_15900:0 "Turamu"
+VICTORY_POINTS_15761:0 "Worrorra"
+VICTORY_POINTS_15770:0 "Audenshire"
+VICTORY_POINTS_15792:0 "Pilesbury"
+VICTORY_POINTS_14556:0 "Anchwhirram"
+VICTORY_POINTS_15832:0 "Guhrnstown"
+VICTORY_POINTS_15860:0 "Kilespost"
+VICTORY_POINTS_15842:0 "Meyerston"
+VICTORY_POINTS_15804:0 "New Hampstead"
+VICTORY_POINTS_16303:0 "Lemisara"
+VICTORY_POINTS_15752:0 "Venduruntana"
+VICTORY_POINTS_16282:0 "Biloka"
+VICTORY_POINTS_15606:0 "Terku"
+VICTORY_POINTS_16206:0 "Kasharaan"
+VICTORY_POINTS_15607:0 "Vila de Sao Nicola"
+VICTORY_POINTS_16272:0 "Ilayaci"
+VICTORY_POINTS_15926:0 "Dalu"
+VICTORY_POINTS_15967:0 "Pitiychola"
+VICTORY_POINTS_15977:0 "Tiwi"
+VICTORY_POINTS_14448:0 "Dansoist"
+VICTORY_POINTS_15685:0 "Shahan"
+VICTORY_POINTS_15684:0 "Attupil"
+VICTORY_POINTS_14536:0 "Yirram"
+VICTORY_POINTS_14457:0 "Tinton"
+VICTORY_POINTS_15827:0 "Melton"
+VICTORY_POINTS_14518:0 "Nana Station"
+VICTORY_POINTS_14504:0 "Elsinore"
+VICTORY_POINTS_15833:0 "Petersby"
+VICTORY_POINTS_15786:0 "Vikteria"
+VICTORY_POINTS_15776:0 "Pama Station"
+VICTORY_POINTS_14472:0 "Tetinar"
+VICTORY_POINTS_16072:0 "Morganastown"
+VICTORY_POINTS_16036:0 "Agarston"
+VICTORY_POINTS_15681:0 "Palivari"
+VICTORY_POINTS_15683:0 "Merkku"
+VICTORY_POINTS_15686:0 "Kumagandarivi"
+VICTORY_POINTS_14464:0 "Nusedrimana"
+VICTORY_POINTS_14466:0 "Manhakadrigiri"
+VICTORY_POINTS_15713:0 "Atika"
+VICTORY_POINTS_15720:0 "Bhamavani"
+VICTORY_POINTS_15728:0 "Nandrigura"
+VICTORY_POINTS_15739:0 "Tumi"
+VICTORY_POINTS_15731:0 "Desdinraga"
+VICTORY_POINTS_14570:0 "Mulatanam"
+VICTORY_POINTS_15930:0 "Laragiya"
+VICTORY_POINTS_15906:0 "Daly"
+VICTORY_POINTS_15960:0 "Kura Kati"
+VICTORY_POINTS_15970:0 "Gundrasupotla"
+VICTORY_POINTS_15981:0 "Umbugaria"
+VICTORY_POINTS_15609:0 "Nilam"
+VICTORY_POINTS_15987:0 "Sitanamupra"
+VICTORY_POINTS_15994:0 "Deviyo"
+VICTORY_POINTS_15621:0 "Kantoru"
+VICTORY_POINTS_16023:0 "Denitoramma"
+VICTORY_POINTS_15628:0 "Jumuparillaka"
+VICTORY_POINTS_15665:0 "Port Lemurien"
+VICTORY_POINTS_15620:0 "Peruvala"
+VICTORY_POINTS_15675:0 "Name"
+VICTORY_POINTS_14415:0 "Shakwaram"
+VICTORY_POINTS_14441:0 "Elumistdragara"
+VICTORY_POINTS_16145:0 "Agneyashila"
+VICTORY_POINTS_16229:0 "Milimia"
+VICTORY_POINTS_16244:0 "Sanggofesaran"
+VICTORY_POINTS_16193:0 "Saitasaban"
+VICTORY_POINTS_16184:0 "Nyeupe"
+VICTORY_POINTS_14439:0 "Gammon"
+VICTORY_POINTS_16179:0 "Amenie"
+VICTORY_POINTS_16171:0 "Dielle"
+VICTORY_POINTS_15687:0 "Cantanakkattai"
+VICTORY_POINTS_16013:0 "Ratu"
+VICTORY_POINTS_15672:0 "Mabusi"
+VICTORY_POINTS_14488:0 "Kilak
+VICTORY_POINTS_16330:0 "Raktarvannam"
+VICTORY_POINTS_16009:0 "Sanduro"
+VICTORY_POINTS_15608:0 "Utukalla"
+VICTORY_POINTS_15953:0 "Tangki"
 VICTORY_POINTS_
 VICTORY_POINTS_
 VICTORY_POINTS_
